footer layout done

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,12 @@
 
         </main>
         <footer>
+            <article>Please consider</article>
+            <article>
+                <div>Every cent helps</div>
+            </article>
 
+            <div class="author-line">made with ♥ my john</div>
         </footer>
     </section>
 </body>
