inspiration link added

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
         <main>
             <article>
                 <div class="bank-name-section">
-                    <div class="bank-logo"></div>
+                    <div class="bank-logo">
+                        <img src="./images/national-bank-of-ukraine.png" alt="National Bank of Ukraine Logo">
+                    </div>
                     <div class="bank-name">
                         <a href="https://bank.gov.ua/ua/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi" target="blank">
                             National Bank of Ukraine
@@ -31,9 +33,11 @@
             </article>
             <article>
                 <div class="bank-name-section">
-                    <div class="bank-logo"></div>
+                    <div class="bank-logo">
+                        <img src="./images/fight-for-right-logo.png" alt="Fight For Right Logo">
+                    </div>
                     <div class="bank-name">
-                       <a href="https://eng.ffr.org.ua/support-in-crisis/eng">Support Ukrainians with Disabilities in Emergency
+                       <a href="https://eng.ffr.org.ua/support-in-crisis/eng" target="blank">Support Ukrainians with Disabilities in Emergency
                         </a> 
                     </div>
                 </div>
@@ -45,24 +49,28 @@
             </article>
             <article>
                 <div class="bank-name-section">
-                    <div class="bank-logo"></div>
+                    <div class="bank-logo">
+                        <img src="./images/fondy-eu-logo.png" alt="Fondy.eu Logo">
+                    </div>
                     <div class="bank-name">
-                        <a href="https://savelife.in.ua/en/donate/">International Charitable Foundation</a>
+                        <a href="https://savelife.in.ua/en/donate/" target="blank">International Charitable Foundation</a>
                     </div>
                 </div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        Fondy.eu – is the highest security level – PCI DSS Level 1.
+                        Fondy.eu – is the highest security levl – PCI DSS Lvl 1.
                         Transfer currency is Ukrainian Hryvnia.
                     </div>
                 </div>
             </article>
             <article>
                 <div class="bank-name-section">
-                    <div class="bank-logo"></div>
+                    <div class="bank-logo">
+                        <img src="./images/army-sos-logo.png" alt="Army SoS Logo">
+                    </div>
                     <div class="bank-name">
                         <a href="
-                        https://armysos.com.ua/en/help-the-army">ARMY SOS</a>
+                        https://armysos.com.ua/en/help-the-army" target="blank">ARMY SOS</a>
                     </div></div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
@@ -70,17 +78,17 @@
                     </div>
                 </div>
             </article>
-            <article>
-                <div class="bank-name-section">
-                    <div class="bank-logo"></div>
+            <article class="paypal-payment-section">
+                <div class="bank-name-section paypal-name-section">
+                    <div class="bank-logo">
+                        <img src="./images/paypal-logo.png" alt="Paypal Logo">
+                    </div>
                     <div class="bank-name">
-                        <a href="
-                        ">PAYPAL: ira.lupu.ira@gmail.com</a>
+                      <a href="https://www.paypal.com/donate/?hosted_button_id=XFYM9KFZ699DC" target="blank">PAYPAL</a>
                     </div></div>
-                <div class="bank-info-section-container">
+                <div class="bank-info-section-container paypal-info-section">
                     <div class="bank-info">
-                     Paypal: ira.lupu.ira@gmail.com - Mark with the note: "CHARITY DONATION"
-                     Since Paypal does not work with Ukraine-Bank, please use
+                        Make checks payable to: United Help Ukraine PO Box 83426, Gaithersburg, MD 20883
                     </div>
                 </div>
             </article>
@@ -91,7 +99,7 @@
             <article>
                 <div>Every cent helps</div>
             </article>
-
+            <div  class="inpiration-link">This  Page is being inspired by <a href="https://docs.google.com/document/d/15eTsCgyH8T3OJSka3UFnw5-XgMu40E74d6Sqg4IxRHw/mobilebasic" target="blank">DONATIONS FOR UKRAINE</a></div>
             <div class="author-line">made with ♥ my john</div>
         </footer>
     </section>
