final cuts for the mobile version - text correction etc.

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        A special multi-currency account opened by the National Bank of Ukraine to fundraise for the protection of Ukraine (* autotranslate the page in the languae of your choice)
+                        A special multi-currency account opened by the National Bank of Ukraine to fundraise for the protection of Ukraine <p>(*please googletranslate page in the languae of your choice)</p>
                     </div>
                 </div>
             </article>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        Being disabled is dificult enough in times of peace. Solidarity from all aorund the coming together to raise this fund.
+                        Being disabled is dificult enough in times of peace. Solidarity from all around the world coming together to raise a fond for Ukraine.
                     </div>
                 </div>
             </article>
@@ -74,7 +74,7 @@
                     </div></div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        Purchases of necessary ammunition, shields, intercommunication and reconnaissance facilities, uniforms, and food supply
+                        Purchases of necessary ammunition, shields, intercommunication and reconnaissance facilities, uniforms, and food supply for Ukraine.
                     </div>
                 </div>
             </article>
@@ -88,7 +88,7 @@
                     </div></div>
                 <div class="bank-info-section-container paypal-info-section">
                     <div class="bank-info">
-                        Make checks payable to: United Help Ukraine PO Box 83426, Gaithersburg, MD 20883
+                        Make checks payable to: <br> United Help Ukraine PO Box 83426, Gaithersburg, MD 20883
                     </div>
                 </div>
             </article>
@@ -99,7 +99,7 @@
             <article>
                 <div>Every cent helps</div>
             </article>
-            <div  class="inpiration-link">This  Page is being inspired by <a href="https://docs.google.com/document/d/15eTsCgyH8T3OJSka3UFnw5-XgMu40E74d6Sqg4IxRHw/mobilebasic" target="blank">DONATIONS FOR UKRAINE</a></div>
+            <div  class="inpiration-link">This  Page is inspired by <br> <a href="https://docs.google.com/document/d/15eTsCgyH8T3OJSka3UFnw5-XgMu40E74d6Sqg4IxRHw/mobilebasic" target="blank">DONATIONS FOR UKRAINE</a></div>
             <div class="author-line">made with ♥ my john</div>
         </footer>
     </section>
