height and iwdth adjustment

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,11 @@
 
         </main>
         <footer>
-            <article>Please consider</article>
+            <article> 
+                <div>
+                      Please consider
+                </div> 
+            </article>
             <article>
                 <div>Every cent helps</div>
             </article>
