--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,8 @@
         <footer>
             <article> 
                 <div>
+                    <!-- the please consider part look flat the wider the screen get. 
+                    make some correction here. -->
                       Please consider
                 </div> 
             </article>
