--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        A special multi-currency account opened by the National Bank of Ukraine to fundraise for the protection of Ukraine <p>(*please googletranslate page in the languae of your choice)</p>
+                        A special multi-currency account opened by the National Bank of Ukraine to fundraise for the protection of Ukraine <p>(*please googletranslate the page in the language of your choice)</p>
                     </div>
                 </div>
             </article>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="bank-info-section-container">
                     <div class="bank-info">
-                        Being disabled is dificult enough in times of peace. Solidarity from all around the world coming together to raise a fond for Ukraine.
+                        Being disabled is difficult enough in times of peace. Solidarity from all around the world coming together to raise a fond for Ukraine.
                     </div>
                 </div>
             </article>
@@ -106,7 +106,7 @@
                 <div>Every cent helps</div>
             </article>
             <div  class="inpiration-link">This  Page is inspired by <br> <a href="https://docs.google.com/document/d/15eTsCgyH8T3OJSka3UFnw5-XgMu40E74d6Sqg4IxRHw/mobilebasic" target="blank">DONATIONS FOR UKRAINE</a></div>
-            <div class="author-line">made with ♥ my john</div>
+            <div class="author-line">made with ♥ by john</div>
         </footer>
     </section>
 </body>
