--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
             </article>
             <article>
                 <div class="bank-name-section">
+                    <div class="bank-logo ">
+                        <img class="logo-seebruecke" src="./images/seebruecke-logo.jpg" alt="Seebrueke-logo">
+                    </div>
+                    <div class="bank-name">
+                        <a href="
+                        https://seebruecke.org/spenden" target="blank">Seebr&#252;cke</a>
+                    </div></div>
+                <div class="bank-info-section-container">
+                    <div class="bank-info">
+                        The political movement Seebr&#252;cke is strongly committed to helping <b>all</b> people fleeing the war at the Ukrainian border.
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="bank-name-section">
                     <div class="bank-logo">
                         <img src="./images/national-bank-of-ukraine.png" alt="National Bank of Ukraine Logo">
                     </div>
@@ -75,21 +90,6 @@
                     <div class="bank-info">
                         Fondy.eu – is the highest security levl – PCI DSS Lvl 1.
                         Transfer currency is Ukrainian Hryvnia.
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="bank-name-section">
-                    <div class="bank-logo">
-                        <img src="./images/army-sos-logo.png" alt="Army SoS Logo">
-                    </div>
-                    <div class="bank-name">
-                        <a href="
-                        https://armysos.com.ua/en/help-the-army" target="blank">ARMY SOS</a>
-                    </div></div>
-                <div class="bank-info-section-container">
-                    <div class="bank-info">
-                        Purchases of necessary ammunition, shields, intercommunication and reconnaissance facilities, uniforms, and food supply for Ukraine.
                     </div>
                 </div>
             </article>
