seebruecke donation added + footer bug solved

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,21 @@
             </article>
             <article>
                 <div class="bank-name-section">
+                    <div class="bank-logo ">
+                        <img class="logo-seebruecke" src="./images/seebruecke-logo.jpg" alt="Seebrueke-logo">
+                    </div>
+                    <div class="bank-name">
+                        <a href="
+                        https://seebruecke.org/spenden" target="blank">Seebr&#252;cke</a>
+                    </div></div>
+                <div class="bank-info-section-container">
+                    <div class="bank-info">
+                        The political movement Seebr&#252;cke is strongly committed to helping <b>all</b> people fleeing the war at the Ukrainian border.
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="bank-name-section">
                     <div class="bank-logo">
                         <img src="./images/national-bank-of-ukraine.png" alt="National Bank of Ukraine Logo">
                     </div>
@@ -78,21 +93,6 @@
                     </div>
                 </div>
             </article>
-            <article>
-                <div class="bank-name-section">
-                    <div class="bank-logo">
-                        <img src="./images/army-sos-logo.png" alt="Army SoS Logo">
-                    </div>
-                    <div class="bank-name">
-                        <a href="
-                        https://armysos.com.ua/en/help-the-army" target="blank">ARMY SOS</a>
-                    </div></div>
-                <div class="bank-info-section-container">
-                    <div class="bank-info">
-                        Purchases of necessary ammunition, shields, intercommunication and reconnaissance facilities, uniforms, and food supply for Ukraine.
-                    </div>
-                </div>
-            </article>
         </main>
         <footer>
             <article> 
@@ -101,10 +101,10 @@
                     make some correction here. -->
                       Please consider
                 </div> 
-            </article>
-            <article>
+
                 <div>Every cent helps</div>
             </article>
+
             <div  class="inpiration-link">This  Page is inspired by <br> <a href="https://docs.google.com/document/d/15eTsCgyH8T3OJSka3UFnw5-XgMu40E74d6Sqg4IxRHw/mobilebasic" target="blank">DONATIONS FOR UKRAINE</a></div>
             <div class="author-line">made with ♥ by john</div>
         </footer>
